Disabling modules: unable to properly use langchain4j